--- a/index.html
+++ b/index.html
@@ -209,10 +209,19 @@
 			<div class="row progress-circle mb-5">
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
-
+						<h2 class="h5 font-weight-bold text-center mb-4">Firewall Administration</h2>
+						<p>
+							<ul>
+								<li>VLAN</li>
+								<li>DNS</li>
+								<li>DHCP</li>
+								<li>Span port</li>
+								<li>ACL for ports & application </li>
+								<li>Tools: PfSense, Ubuntu, Windows Server, Windows 10</li>
+							</ul>
+						</p>
 						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='95'>
+						<!-- <div class="progress mx-auto" data-value='95'>
 							<span class="progress-left">
 								<span class="progress-bar border-primary"></span>
 							</span>
@@ -222,7 +231,7 @@
 							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
 								<div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
 							</div>
-						</div>
+						</div> -->
 						<!-- END -->
 
 						<!-- Demo info -->
