--- a/index.html
+++ b/index.html
@@ -220,61 +220,22 @@
 								<li>Tools: PfSense, Ubuntu, Windows Server, Windows 10</li>
 							</ul>
 						</p>
-						<!-- Progress bar 1 -->
-						<!-- <div class="progress mx-auto" data-value='95'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
-							</div>
-						</div> -->
-						<!-- END -->
-
-						<!-- Demo info -->
-						<!-- <div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div> -->
-						<!-- END -->
 					</div>
 				</div>
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
-
-						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='98'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">98<sup class="small">%</sup></div>
-							</div>
-						</div>
-						<!-- END -->
-
-						<!-- Demo info -->
-						<div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div>
-						<!-- END -->
+						<h2 class="h5 font-weight-bold text-center mb-4">Linux Administration</h2>
+						<p>
+							<ul>
+								<li>VLAN</li>
+								<li>DNS</li>
+								<li>DHCP</li>
+								<li>Span port</li>
+								<li>ACL for ports & application </li>
+								<li>Tools: Redhat, Centos, Putty</li>
+							</ul>
+						</p>
 					</div>
 				</div>
 
